feature: added create role feature
