# packages/backend/src/app/routes.ts
@@ -1,12 +1,14 @@
 import { Router, type Request, type Response, type NextFunction } from 'express';
 import { invalidArgumentErrorHandler } from '../modules/Shared/infrastructure/api/invalidArgumentErrorHandler';
 import userRoutes from '../modules/User/infrastructure/api/userRoutes';
-import authRoutes from '../modules/auth/infrastructure/api/authRoutes';
+import authRoutes from '../modules/Auth/infrastructure/api/authRoutes';
+import roleRoutes from '../modules/Role/infrastructure/api/roleRoutes';
 
 const router = Router();
 
 router.use('/users', userRoutes);
 router.use('/auth', authRoutes);
+router.use('/roles', roleRoutes);
 
 router.use(invalidArgumentErrorHandler);
 
