# packages/backend/src/modules/Role/application/create/ICreateRoleRequest.ts
@@ -1,0 +1,5 @@
+export interface ICreateRoleRequest {
+  id: string;
+  roleName: string;
+  roleState: string;
+}
