# packages/backend/swagger_output.json
@@ -61,6 +61,31 @@
           }
         }
       }
+    },
+    "/roles/": {
+      "post": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateRoleRequest"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateRoleRequest"
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -117,6 +142,26 @@
         },
         "xml": {
           "name": "LoginRequest"
+        }
+      },
+      "CreateRoleRequest": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "example": "string"
+          },
+          "roleName": {
+            "type": "string",
+            "example": "string"
+          },
+          "roleState": {
+            "type": "string",
+            "example": "string"
+          }
+        },
+        "xml": {
+          "name": "CreateRoleRequest"
         }
       }
     }
